day 2
#include <stdio.h>
int input (int *a, int *b)
{
   printf ("Enter a number \n");
   scanf ("%d", a);
   printf ("Enter a number \n");
   scanf ("%d", b);
}
int compute (int a, int b)
{
  int  x=a+b;
   return x;
}
void output (int m, int n, int o)
{
   printf ("%d+%d is %d", m,n,o);
}
int main (void)
{
   int a,b;
   input(&a,&b);
   int c=compute(a,b);
   output (a,b,c);
}
   
   
   
   bishika alay@DESKTOP-S1U8HRN MSYS ~
$ gcc fad.c
fad.c: In function ‘input’:
fad.c:7:11: warning: missing terminating " character
    scanf ("%d', b);
           ^
fad.c:7:11: error: missing terminating " character
    scanf ("%d', b);
           ^~~~~~~~~
fad.c:8:1: error: expected expression before ‘}’ token
 }
 ^
fad.c:8:1: error: expected ‘;’ before ‘}’ token
fad.c: In function ‘compute’:
fad.c:11:6: error: ‘a’ undeclared (first use in this function)
    x=a+b;
      ^
fad.c:11:6: note: each undeclared identifier is reported only once for each function it appears in
fad.c:11:8: error: ‘b’ undeclared (first use in this function)
    x=a+b;
        ^
fad.c: In function ‘main’:
fad.c:20:10: error: ‘b’ undeclared (first use in this function)
    int a=b=input();
          ^
fad.c:20:12: error: too few arguments to function ‘input’
    int a=b=input();
            ^~~~~
fad.c:2:5: note: declared here
 int input (int *a, int *b)
     ^~~~~
fad.c:21:10: error: too many arguments to function ‘compute’
    int c=compute(a,b);
          ^~~~~~~
fad.c:9:5: note: declared here
 int compute (int x)
     ^~~~~~~
fad.c:22:4: error: too few arguments to function ‘output’
    output (a,b);
    ^~~~~~
fad.c:14:6: note: declared here
 void output (int m, int n, int o)
      ^~~~~~

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ np
error: C:\Users\bishika alay\AppData\Roaming\Notepad++\plugins\Config\Hunspell\en_US.usr: cannot open

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ fad.c
bash: fad.c: command not found

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ fad.c
bash: fad.c: command not found

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ np
error: C:\Users\bishika alay\AppData\Roaming\Notepad++\plugins\Config\Hunspell\en_US.usr: cannot open

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ gcc jeez.c
jeez.c: In function ‘input’:
jeez.c:7:11: warning: missing terminating " character
    scanf ("%d', b);
           ^
jeez.c:7:11: error: missing terminating " character
    scanf ("%d', b);
           ^~~~~~~~~
jeez.c:8:1: error: expected expression before ‘}’ token
 }
 ^
jeez.c:8:1: error: expected ‘;’ before ‘}’ token
jeez.c: In function ‘compute’:
jeez.c:11:4: error: ‘x’ undeclared (first use in this function)
    x=a+b;
    ^
jeez.c:11:4: note: each undeclared identifier is reported only once for each function it appears in
jeez.c: In function ‘main’:
jeez.c:23:4: error: expected ‘,’ or ‘;’ before ‘output’
    output (a,b);
    ^~~~~~

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ np
error: C:\Users\bishika alay\AppData\Roaming\Notepad++\plugins\Config\Hunspell\en_US.usr: cannot open

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ gcc jeez.c
jeez.c: In function ‘main’:
jeez.c:23:4: error: too few arguments to function ‘output’
    output (a,b);
    ^~~~~~
jeez.c:14:6: note: declared here
 void output (int m, int n, int o)
      ^~~~~~

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ np
error: C:\Users\bishika alay\AppData\Roaming\Notepad++\plugins\Config\Hunspell\en_US.usr: cannot open

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ gcc jeez.c

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ 5
bash: 5: command not found

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ 67
bash: 67: command not found

bishika alay@DESKTOP-S1U8HRN MSYS ~
$ ./a.exe
Enter a number
5
Enter a number
6
5+6 is 11
bishika alay@DESKTOP-S1U8HRN MSYS ~
$ ./a.exe
Enter a number
98
Enter a number
199
98+199 is 297
bishika alay@DESKTOP-S1U8HRN MSYS ~
$ np
error: C:\Users\bishika alay\AppData\Roaming\Notepad++\plugins\Config\Hunspell\en_US.usr: cannot open

LEARNING EPISODE 2

